@@ -1,26 +1,29 @@
 chemical/x-xyz
+	_description=XYZ file
 	default_action_type=component
 	short_list_component_iids=OAFIID:gchem3d_control
 	short_list_component_iids_for_novice_user_level=OAFIID:gchem3d_control
 	short_list_component_iids_for_intermediate_user_level=OAFIID:gchem3d_control
 	short_list_component_iids_for_advanced_user_level=OAFIID:gchem3d_control
-	category=Documents/Sciences/Chemistry
+	_category=Documents/Sciences/Chemistry
 	use_category_default=yes
 
 chemical/x-pdb
+	_description=PDB file
 	default_action_type=component
 	short_list_component_iids=OAFIID:gchem3d_control
 	short_list_component_iids_for_novice_user_level=OAFIID:gchem3d_control
 	short_list_component_iids_for_intermediate_user_level=OAFIID:gchem3d_control
 	short_list_component_iids_for_advanced_user_level=OAFIID:gchem3d_control
-	category=Documents/Sciences/Chemistry
+	_category=Documents/Sciences/Chemistry
 	use_category_default=yes
 
 chemical/x-mdl-molfile
+	_description=MDL MOL file
 	default_action_type=component
 	short_list_component_iids=OAFIID:gchem3d_control
 	short_list_component_iids_for_novice_user_level=OAFIID:gchem3d_control
 	short_list_component_iids_for_intermediate_user_level=OAFIID:gchem3d_control
 	short_list_component_iids_for_advanced_user_level=OAFIID:gchem3d_control
-	category=Documents/Sciences/Chemistry
+	_category=Documents/Sciences/Chemistry
 	use_category_default=yes
