@@ -1,2 +1,4 @@
 glade/gtkperiodic.glade
 chemistry/elements.xml.in
+chem3d/gchem3d.server.in
+gchemutils.keys.in
